feat: 통계 대시보드 추가 및 Fortify 설정 리팩토링
- 전체 프로젝트 및 분석 작업 지표를 포함하는 새로운 통계 대시보드를 구현했습니다.
- Fortify 설정에서 'reportOutputDirectory'를 제거하고 'resultOutputDirectory'를 사용하여 파생 경로(FPR, XML, PDF)를 설정하도록 리팩토링했습니다.
- 레이아웃에서 프래그먼트 포함 및 HttpServletRequest 사용과 관련된 Thymeleaf 템플릿 파싱 오류를 수정했습니다.
- AnalysisJobRepository를 업데이트하여 작업 ID에 UUID를 사용하고 통계를 위한 사용자 정의 쿼리를 추가했습니다.